--- a/about_me.html
+++ b/about_me.html
@@ -73,7 +73,7 @@
                 <li class="sty1"> <span>이름</span> : 류연수(Ryu YeonSoo)</li>
                 <li class="sty1"> <span>생년월일</span> : 2002.02.15</li>
                 <li class="sty1"> <span>관심분야</span> : 콘텐츠 기획</li>
-                <li class="sty1"> <span>취미</span> : 게임, 영화/시리즈 시청, 음악듣기</li>
+                <li class="sty1"> <span>취미</span> : 게임, 영화/OTT 시청, 음악듣기</li>
                 <li class="sty1"> <span>이메일</span> : yyss6340@naver.com</li>
               </ul>
               <hr>
