--- a/about_me.html
+++ b/about_me.html
@@ -81,18 +81,18 @@
             </div>
             
             <div class="col-3">
-                <img src="./images/rabbit.jpg" class="img-fluid w-200">
+                <img src="./images/me.jpg" class="img-fluid w-200">
             </div>
         </div>  
         <div class="row">
             <div class="col-sm clo-lg-4 bg-primary">
-                <img src="./images/Cat1-1.jpg" class="img-fluid">
+                <img src="./images/cat_0.jpg" class="img-fluid">
             </div>
             <div class="col-sm col-lg-4 bg-danger">
-                <img src="./images/Cat2.jpg" class="img-fluid">
+                <img src="./images/cat_1.jpg" class="img-fluid">
             </div>
             <div class="col-sm col-lg-4 bg-warning">
-                <img src="./images/Cat3.jpg" class="img-fluid">
+                <img src="./images/cat_2.jpg" class="img-fluid">
             </div>
         </div>
     </div>
