--- a/blog_list.html
+++ b/blog_list.html
@@ -83,7 +83,7 @@
         <h1>Blog</h1>
             <!-- Blog Post -->
             <div class="card mb-4">
-              <img class="card-img-top" src="./images/picture2.jpg" alt="Card image cap">
+              <img class="card-img-top" src="./images/blog_0.jpg" alt="Card image cap">
               <div class="card-body">
                 <h2 class="card-title">Post Title</h2>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
@@ -97,7 +97,7 @@
     
             <!-- Blog Post -->
             <div class="card mb-4">
-              <img class="card-img-top" src="./images/picture1.jpg" alt="Card image cap">
+              <img class="card-img-top" src="./images/blog_1.jpg" alt="Card image cap">
               <div class="card-body">
                 <h2 class="card-title">Post Title</h2>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
