--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <p>문단은 p로 쓰세요. p는 아마도 Paragraph의 앞 자를 따 온 것이겠죠?</p>
             <a href="https://www.google.com">Go to google</a>
             <hr />
-            <img src="./images/stay_funky.jpg" width="600px">
+            <img src="./images/home_0.jpg" width="600px">
 
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
